--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://github.com/thevishwasmehta/thevishwasmehta.github.io">
+              <a href="https://github.com/thevishwasmehta">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-github fa-stack-1x fa-inverse"></i>
